[package]

name = "rust-2048"
version = "0.0.0"
authors = ["coeuvre <coeuvre@gmail.com>"]

[[bin]]

name = "rust-2048"
path = "src/main.rs"

[dependencies]
serde_json = "1.0.52"
serde = { version = "1.0.106", features = ["derive"] }
rand = "0.7.3"
piston_window = "0.108.0"
pistoncore-sdl2_window = "0.63.0"
piston2d-opengl_graphics = "0.72.0"

[profile.release]
lto = true
